backend/crash_log.txt
Traceback (most recent call last):
  File "/app/run.py", line 62, in <module>
    import main
  File "/app/main.py", line 87, in <module>
    from routers.credits import router as credits_router
  File "/app/routers/credits.py", line 1
    ```python
    ^
SyntaxError: invalid syntax
